Fix "clear emoji history" action

It wasn't saving the cleared config entry to the config file, so any
changes to the view (i.e. to make all the emojis disappear) would be
un-done when you closed the window and then re-opened it.

BUG: 443974
FIXED-IN: 5.23.1


(cherry picked from commit 58f29efd5d2975129c07dcdc4a9eb78669c5eb67)